--- a/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategory.cshtml
@@ -22,7 +22,7 @@
             <a href="#" role="button" class="btn btn-outline red-thunderbird popovers" data-trigger="hover" data-placement="top" data-content="تازه سازی اطلاعات در مواقع ضروری" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
             <a href="/Administrator/Category/AddCategory/@ViewBag.id" role="button" class="btn green-jungle"> ثبت زیردسته دوم <span></span><i class="fa fa-plus ml-2"></i></a>
             @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
-            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به جدول منو های ثبت شده در سایت"> بازگشت </a>
+            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به جدول زیرمنوهای سطح اول"> بازگشت به زیرمنوهای سطح اول </a>
         </div>
     </div>
     <div class="portlet-body">
@@ -30,9 +30,9 @@
             <thead>
                 <tr class="font-white">
                     <th class="text-center">ردیف</th>
-                    <th class="text-center">نام زیردسته به فارسی</th>
-                    <th class="text-center EN__Font">Subcategory name in English</th>
-                    <th class="text-center">نام زیردسته منو</th>
+                    <th class="text-center">نام زیردسته دوم به فارسی</th>
+                    <th class="text-center EN__Font">Subcategory second name in English</th>
+                    <th class="text-center">نام زیردسته منو اول</th>
                     <th class="text-center">عملیات</th>
                 </tr>
             </thead>
@@ -45,7 +45,7 @@
                         <td class="text-center EN__Font">@item.CategoryEnTitle</td>
                         <td><a href="/Administrator/Category/ShowAllSubCategorythree/@item.Categoryid" class="btn btn-outline green-jungle popovers btn-block" data-trigger="hover" data-placement="top" data-content=" جهت نمایش زیرمنو های سطح سوم، کلیک نمایید"> ورود به زیردسته نهایی : <span class="font-blue-ebonyclay bold">@item.CategoryFaTitle</span></a></td>
                         <td class="text-center">
-                            <a class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
+                            <a href="#" class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
                                 <i class="fa fa-pencil"></i>
                             </a>
                             <a class="btn red-thunderbird btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="غیرفعال سازی">
@@ -57,11 +57,16 @@
             </tbody>
         </table>
     </div>
+    <partial name="_AdminMainModal" />
 </div>
 <!-- END CONTAINER -->
 @section MainScripts{
-    <script src="~/lib/persiandatepicker/calendar.js"></script>
-    <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js"></script>
+    <script src="~/lib/persiandatepicker/calendar.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
+    <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js" asp-append-version="true"></script>
+    <script src="~/lib/OpenModal.js" asp-append-version="true"></script>
+    <script src="~/lib/SwalAlert/sweetAlert.js" asp-append-version="true"></script>
     <!--===================================================================-->
     <!--اسکریپت جستجوی اطلاعات-->
     <script>
@@ -94,11 +99,11 @@
                 css: {
                     border: 'none',
                     padding: '22px',
-                    backgroundColor: '#000',
+                    backgroundColor: '#3F51B5',
                     '-webkit-border-radius': '15px',
                     '-moz-border-radius': '15px',
                     allowBodyStretch: true,
-                    opacity: .7,
+                    opacity: 1.0,
                     textAlign: 'center',
                     color: '#fff',
                     cursor: 'wait',
