--- a/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategorythree.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategorythree.cshtml
@@ -21,7 +21,8 @@
         <div class="actions">
             <a href="#" role="button" class="btn btn-outline red-thunderbird popovers" data-trigger="hover" data-placement="top" data-content="تازه سازی اطلاعات در مواقع ضروری" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
             <a href="/Administrator/Category/AddCategory/@ViewBag.id" role="button" class="btn green-jungle"> ثبت زیردسته نهایی<i class="fa fa-plus ml-2"></i></a>
-            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به جدول منو های ثبت شده در سایت"> بازگشت </a>
+            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به جدول زیرمنوهای سطح اول"> بازگشت به زیرمنوهای سطح اول </a>
+            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت </a>
         </div>
     </div>
     <div class="portlet-body">
@@ -29,8 +30,8 @@
             <thead>
                 <tr class="font-white">
                     <th class="text-center">ردیف</th>
-                    <th class="text-center">نام زیردسته به فارسی</th>
-                    <th class="text-center EN__Font">Last Subcategory name in English</th>
+                    <th class="text-center">نام زیردسته سوم به فارسی</th>
+                    <th class="text-center EN__Font">Last Subcategory third name in English</th>
                     <th class="text-center">عملیات</th>
                 </tr>
             </thead>
@@ -91,11 +92,11 @@
                 css: {
                     border: 'none',
                     padding: '22px',
-                    backgroundColor: '#000',
+                    backgroundColor: '#3F51B5',
                     '-webkit-border-radius': '15px',
                     '-moz-border-radius': '15px',
                     allowBodyStretch: true,
-                    opacity: .7,
+                    opacity: 1.0,
                     textAlign: 'center',
                     color: '#fff',
                     cursor: 'wait',
