--- a/FarhangbookStore/Areas/Administrator/Views/Category/showAllCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/showAllCategory.cshtml
@@ -23,7 +23,7 @@
             <a asp-area="Administrator" asp-controller="Category" asp-action="AddCategory" role="button" class="btn green-jungle"> ثبت دسته بندی جدید <i class="fa fa-plus ml-2"></i></a>
             @* <a href="#showmodal=/Administrator/Category/AddCategory" role="button" class="btn green-jungle"> ثبت دسته بندی جدید <i class="fa fa-plus ml-2"></i></a> *@
             @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
-            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت </a>
+            <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت </a>
         </div>
     </div>
     <div class="portlet-body">
@@ -136,11 +136,11 @@
                 css: {
                     border: 'none',
                     padding: '22px',
-                    backgroundColor: '#000',
+                    backgroundColor: '#3F51B5',
                     '-webkit-border-radius': '15px',
                     '-moz-border-radius': '15px',
                     allowBodyStretch: true,
-                    opacity: .7,
+                    opacity: 1.0,
                     textAlign: 'center',
                     color: '#fff',
                     cursor: 'wait',
