--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_QuickAccess/Admin_QuickAccess.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_QuickAccess/Admin_QuickAccess.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="btn-group">
-    <button type="button" class="btn red-haze btn-sm dropdown-toggle" data-toggle="dropdown"
+    <button type="button" class="btn green-jungle btn-sm dropdown-toggle" data-toggle="dropdown"
             data-hover="dropdown" data-close-others="true">
-        <span class="hidden-sm hidden-xs">ثبت و دسترسی سریع&nbsp;</span>
+        <span class="hidden-sm hidden-xs">دسترسی سریع&nbsp;</span>
         <i class="fa fa-angle-down"></i>
     </button>
     <ul class="dropdown-menu" role="menu">
