--- a/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/ShowAllSubCategory.cshtml
@@ -45,7 +45,7 @@
                         <td class="text-center EN__Font">@item.CategoryEnTitle</td>
                         <td><a href="/Administrator/Category/ShowAllSubCategorythree/@item.Categoryid" class="btn btn-outline green-jungle popovers btn-block" data-trigger="hover" data-placement="top" data-content=" جهت نمایش زیرمنو های سطح سوم، کلیک نمایید"> ورود به زیردسته نهایی : <span class="font-blue-ebonyclay bold">@item.CategoryFaTitle</span></a></td>
                         <td class="text-center">
-                            <a href="#" class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
+                            <a href="#showmodal=/Administrator/Category/UpdateSubTwoCategory/@item.Categoryid" class="btn green-haze btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="ویرایش اطلاعات">
                                 <i class="fa fa-pencil"></i>
                             </a>
                             <a class="btn red-thunderbird btn-circle btn-icon-only btn-default popovers" data-trigger="hover" data-placement="top" data-content="غیرفعال سازی">
