--- a/FarhangbookStore/Areas/Administrator/Views/Category/_ModalUpdateSubLastCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/_ModalUpdateSubLastCategory.cshtml
@@ -5,7 +5,7 @@
 	<h5 class="modal-title"> ویرایش دسته بندی : <span class="badge bg-blue-ebonyclay bg-font-blue-ebonyclay"> @Model.CategoryFaTitle </span></h5>
 </div>
 
-<form asp-action="UpdateCategory" method="post" data-ajax="true" data-Success="Refresh" enctype="multipart/form-data">
+<form asp-action="UpdateSubTwoCategory" method="post" data-ajax="true" data-Success="Refresh" enctype="multipart/form-data">
 	<div class="modal-body">
 		<input type="hidden" asp-for="Categoryid" />
 		<div class="d-flex flex-column nav-group nav-group-outline mx-auto mb-10 p-10">
