changelog_02-10-10 : Complete admin config entities PATCH1.2

--- a/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/AddCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FarhangbookStore.DataModel.Entities.TBL_ProductCategory
 @inject FarhangbookStore.PublicExtentions.ConvertDate convertDate
 @{
-    ViewData["Title"] = "ثبت دسته بندی جدید | فروشگاه اینترنتی کتابفروشی فرهنگ";
+    ViewData["Title"] = "ثبت دسته بندی جدید | فروشگاه اینترنتی بانک کتاب شیراز";
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
