--- a/FarhangbookStore/Areas/Administrator/Views/Category/showAllCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/showAllCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using FarhangbookStore.DataModel.Entities;
 @model IEnumerable<TBL_ProductCategory>
 @{
-    ViewData["Title"] = "نمایش کلیه دسته بندی ها | فروشگاه اینترنتی کتابفروشی فرهنگ";
+    ViewData["Title"] = "نمایش کلیه دسته بندی ها | فروشگاه اینترنتی بانک کتاب شیراز";
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
