--- a/FarhangbookStore/Areas/Administrator/Views/Home/Index.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "پنل مدیریت کتابفروشی فرهنگ | خوش آمدید";
+    ViewData["Title"] = "پنل مدیریت بانک کتاب شیراز | خوش آمدید";
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
