--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Footer/Admin_Footer.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Footer/Admin_Footer.cshtml
@@ -1,4 +1,4 @@
 ﻿<div class="page-footer-inner">
-    1402-2023 © حقوق کتابفروشی فرهنگ متعلق به علی غلامپور است &nbsp;|&nbsp;
+    1402-2023 © حقوق بانک کتاب شیراز متعلق به <span class="bold font-blue-ebonyclay" style="font-family:IRANSansWeb(FaNum)_Bold">بانک کتاب شیراز</span> است &nbsp;|&nbsp;
     <a target="http://www.webnext.ir" href="#">طراحی و توسعه</a>
 </div>
