--- a/FarhangbookStore/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
@@ -5,14 +5,14 @@
     <title>@ViewBag.Title</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta name="description" content="فروشگاه اینترنتی کتابفروشی فرهنگ | خوش آمدید" />
-    <meta name="keywords" content="فروشگاه اینترنتی کتابفروشی فرهنگ" />
+    <meta name="description" content="فروشگاه اینترنتی بانک کتاب شیراز | خوش آمدید" />
+    <meta name="keywords" content="فروشگاه اینترنتی بانک کتاب شیراز" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:locale" content="fa_IR" />
-    <meta property="og:type" content="فروشگاه اینترنتی کتابفروشی فرهنگ" />
-    <meta property="og:title" content="فروشگاه اینترنتی کتابفروشی فرهنگ" />
+    <meta property="og:type" content="فروشگاه اینترنتی بانک کتاب شیراز" />
+    <meta property="og:title" content="فروشگاه اینترنتی بانک کتاب شیراز" />
     <meta property="og:url" content="http://www.farhangbooks.ir" />
-    <meta property="og:site_name" content="فروشگاه اینترنتی کتابفروشی فرهنگ" />
+    <meta property="og:site_name" content="فروشگاه اینترنتی بانک کتاب شیراز" />
     <!-- BEGIN CSS -->
     <partial name="_SiteReferencesCSS" />
     @RenderSection("styles", required: false)
