--- a/FarhangbookStore/Areas/Administrator/Views/Category/_ModalDidableCategory.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Category/_ModalDidableCategory.cshtml
@@ -6,6 +6,9 @@
 </div>
 
 <form asp-action="DeleteCategory" method="post" data-ajax="true" data-Success="Refresh" enctype="multipart/form-data">
+	<!--نمایش آی دی زیردسته دوم جهت ویرایش-->
+	<input type="hidden" asp-for="SubCategory" />
+	<!--نمایش آی دی زیردسته اول جهت یافتن آی دی دوم-->
 	<input type="hidden" asp-for="Categoryid" />
 	<div class="modal-body">
 		<div class="alert alert-warning">
