--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -14,7 +14,7 @@
         <li class="nav-item  ">
             <a href="javascript:;" class="nav-link nav-toggle">
                 <i class="icon-folder-alt"></i>
-                <span class="title">مدیریت کالاها و اطلاعات</span>
+                <span class="title">اطلاعات کتاب</span>
                 <span class="arrow"></span>
             </a>
             <ul class="sub-menu">
@@ -30,11 +30,6 @@
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link ">
-                        <span class="title">اسلایدرها</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link ">
                         <span class="title">ویژه گی ها</span>
                     </a>
                 </li>
@@ -45,7 +40,12 @@
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link ">
-                        <span class="title">ناشران</span>
+                        <span class="title">ناشران (مؤلف)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">سایز کتاب (قطع)</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -87,7 +87,7 @@
         </li>
         <li class="nav-item  ">
             <a href="javascript:;" class="nav-link nav-toggle">
-                <i class=" icon-users"></i>
+                <i class="icon-users"></i>
                 <span class="title">کاربران</span>
                 <span class="arrow"></span>
             </a>
@@ -102,7 +102,7 @@
                         <span class="title">مدیریت کاربران</span>
                     </a>
                 </li>
-                <li class="nav-item  ">
+                <li class="nav-item">
                     <a href="#" class="nav-link ">
                         <span class="title">دسترسی های کاربران</span>
                     </a>
@@ -110,7 +110,31 @@
             </ul>
         </li>
         <li class="heading">
-            <h3 class="uppercase">تنظیمات فروشگاه</h3>
+            <h3 class="uppercase">تنظیمات سایت</h3>
+        </li>
+        <li class="nav-item  ">
+            <a href="javascript:;" class="nav-link nav-toggle">
+                <i class="icon-picture"></i>
+                <span class="title">تنظیمات  محتوای فروشگاه</span>
+                <span class="arrow"></span>
+            </a>
+            <ul class="sub-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">اسلایدرها</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">چند رسانه ای</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">بنرها</span>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="nav-item  ">
             <a href="javascript:;" class="nav-link nav-toggle">
@@ -119,15 +143,24 @@
                 <span class="arrow"></span>
             </a>
             <ul class="sub-menu">
-                <li class="nav-item  ">
+                <li class="nav-item">
                     <a href="#" class="nav-link ">
                         <span class="title">پنل پیامک</span>
                     </a>
                 </li>
-                <li class="nav-item  ">
+                <li class="nav-item">
                     <a href="#" class="nav-link ">
-                        <span class="title">تنظیمات سایت</span>
-                        @* <span class="badge badge-danger">2</span> *@
+                        <span class="title">گزارشات</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">دسترسی ها</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link ">
+                        <span class="title">اطلاعات سایت</span>
                     </a>
                 </li>
             </ul>
