changelog_02-10-12 : Complete admin config entities PATCH1.3

--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link ">
+                    <a asp-area="Administrator" asp-controller="Writer" asp-action="ShowAllWriter" class="nav-link ">
                         <span class="title">ناشران (مؤلف)</span>
                     </a>
                 </li>
