--- a/FarhangbookStore/Areas/Administrator/Views/Publisher/AddPublisher.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Publisher/AddPublisher.cshtml
@@ -1,12 +1,12 @@
-﻿@model FarhangbookStore.DataModel.Entities.TBL_ProductCategory
+﻿@model FarhangbookStore.DataModel.Entities.TBL_ProductPublisher
 @inject FarhangbookStore.PublicExtentions.ConvertDate convertDate
 @{
-    ViewData["Title"] = "ثبت دسته بندی جدید | فروشگاه اینترنتی بانک کتاب شیراز";
+    ViewData["Title"] = "ثبت اطلاعات ناشر جدید | فروشگاه اینترنتی بانک کتاب شیراز";
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
 @section scripts
-    {
+{
     <partial name="_ValidationScriptsPartial" />
 }
 
@@ -16,20 +16,20 @@
 <div class="m-heading-1 border-yellow-crusta m-bordered">
     <h4 class="bold">راهنما</h4>
     <p>
-        کاربرگرامی: شما در این بخش می توانید علاوه بر ثبت اطلاعات کتاب جدید، جهت مدیرت دسته بندی های ثبت شده بر روی دکمه <span class="bold">مدیریت دسته بندی ها</span> کلیک نمایید.
+        کاربرگرامی: شما در این بخش می توانید علاوه بر ثبت ناشر جدید، جهت مدیرت ناشران ثبت شده بر روی دکمه <span class="bold">مدیریت ناشر</span> کلیک نمایید.
     </p>
 </div>
 <!-- BEGIN CONTAINER -->
 <div class="portlet light portlet-fit portlet-datatable bordered">
     <div class="portlet-title">
         <div class="caption">
-            <i class=" icon-layers font-green"></i>
-            <span class="caption-subject font-green-sharp bold uppercase tooltips" data-container="body" data-placement="top" data-original-title="Tooltip in top">ثبت دسته بندی جدید</span>
+            <i class="icon-folder-alt font-green"></i>
+            <span class="caption-subject font-green-sharp bold uppercase tooltips" data-container="body" data-placement="top" data-original-title="Tooltip in top">ثبت ناشر جدید</span>
         </div>
         <div class="actions">
             <a href="#" role="button" class="btn btn-outline red-thunderbird" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
-            <a asp-area="Administrator" asp-controller="Category" asp-action="showAllCategory" role="button" class="btn green-jungle"> مدیریت دسته بندی ها </a>
-@*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
+            <a asp-area="Administrator" asp-controller="Publisher" asp-action="ShowAllPublisher" role="button" class="btn green-jungle"> مدیریت ناشرین </a>
+            @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
             <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت </a>
         </div>
     </div>
@@ -44,7 +44,7 @@
                         Swal.fire({
                             position: 'center',
                             icon: 'success',
-                            title: 'دسته بندی ثبت شد.',
+                            title: 'اطلاعات نویسنده ثبت شد.',
                             showConfirmButton: false,
                             timer: 1800
                         })
@@ -71,33 +71,29 @@
             }
         }
         <!-- PERSONAL INFO TAB -->
-        <form asp-area="Administrator" asp-controller="Category" asp-action="AddCategory" enctype="multipart/form-data">
+        <form asp-area="Administrator" asp-controller="Writer" asp-action="AddWriter" enctype="multipart/form-data">
             <!-- دسته بندی اصلی جهت اضافه کردن زیردسته ID بازگشت مقدار  -->
-            @if (ViewBag.id != 0)
-            {
-                <input type="hidden" asp-for="SubCategory" value="@ViewBag.id" />
-            }
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-5 col-xl-12 col-sm-12">
                         <div class="form-group">
                             @* <label asp-for="CategoryFaTitle" class="control-label"></label> *@
                             <div class="input-icon right">
-                                <i class="icon-layers"></i>
-                                <input asp-for="CategoryFaTitle" class="form-control input-icon right" autofocus="autofocus" placeholder="عنوان دسته بندی را به فارسی وارد نمایید." />
+                                <i class="icon-folder-alt"></i>
+                                <input asp-for="PublisherFaTitle" class="form-control input-icon right" autofocus="autofocus" placeholder="نام ناشر را به فارسی وارد نمایید." />
                             </div>
-                            <span asp-validation-for="CategoryFaTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
+                            <span asp-validation-for="PublisherFaTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
                         </div>
                     </div>
                     <div class="col-md-5 col-xl-12 col-sm-12">
                         <div class="form-group">
                             @* <label asp-for="CategoryEnTitle" class="control-label"></label> *@
                             <div class="input-icon right">
-                                <i class="icon-layers"></i>
-                                <input asp-for="CategoryEnTitle" class="form-control input-icon right EN__Font" placeholder="Enter the title of the category in English." />
+                                <i class="icon-folder-alt"></i>
+                                <input asp-for="PublisherEnTitle" class="form-control input-icon right EN__Font" placeholder="Enter the name of the publisher in English." />
                             </div>
                         </div>
-                            <span asp-validation-for="CategoryEnTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
+                        <span asp-validation-for="PublisherEnTitle" id="inputError" class="bg-red-thunderbird bg-font-red-thunderbird"></span>
                     </div>
                     <div class="col-md-2 col-xl-12 col-sm-12">
                         <button type="submit" data-loading-text="در حال بررسی ..." value="ثبت اطلاعات" class="btn-block btn btn-primary mt-ladda-btn ladda-button mt-progress-demo" data-style="slide-left"> ثبت و ذخیره <i class="fa fa-save ml-2"></i></button>
@@ -109,7 +105,7 @@
     </div>
 </div>
 <!-- END CONTAINER -->
-@section MainScripts{
+@section MainScripts {
     <script src="~/lib/persiandatepicker/calendar.js" asp-append-version="true"></script>
     <script src="~/lib/persiandatepicker/jquery.Bootstrap-PersianDateTimePicker.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
@@ -118,7 +114,7 @@
     <!--===================================================================-->
     <!--اسکریپت جستجوی اطلاعات-->
     <script>
-                var infoDataTable = $('#Datatable_infoTable').DataTable({
+                        var infoDataTable = $('#Datatable_infoTable').DataTable({
                 paging: true,
                 // pageLength: 5,
                 // نمایش اطلاعات جستجو شده در زیر جدول به صورت فارسی
@@ -165,4 +161,3 @@
     </script>
     <!--==================================================================-->
 }
-
