changelog_02-10-14 : Complete admin entities PATCH1.5

--- a/FarhangbookStore/Areas/Administrator/Views/Publisher/AddPublisher.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Publisher/AddPublisher.cshtml
@@ -44,7 +44,7 @@
                         Swal.fire({
                             position: 'center',
                             icon: 'success',
-                            title: 'اطلاعات نویسنده ثبت شد.',
+                            title: 'اطلاعات ناشر ثبت شد.',
                             showConfirmButton: false,
                             timer: 1800
                         })
@@ -71,7 +71,7 @@
             }
         }
         <!-- PERSONAL INFO TAB -->
-        <form asp-area="Administrator" asp-controller="Writer" asp-action="AddWriter" enctype="multipart/form-data">
+        <form asp-area="Administrator" asp-controller="Publisher" asp-action="AddPublisher" enctype="multipart/form-data">
             <!-- دسته بندی اصلی جهت اضافه کردن زیردسته ID بازگشت مقدار  -->
             <div class="panel-body">
                 <div class="row">
