--- a/FarhangbookStore/Areas/Administrator/Views/Publisher/ShowAllPublisher.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Publisher/ShowAllPublisher.cshtml
@@ -20,9 +20,7 @@
         </div>
         <div class="actions">
             <a href="#" role="button" class="btn btn-outline red-thunderbird popovers" data-trigger="hover" data-placement="top" data-content="تازه سازی اطلاعات در مواقع ضروری" id="Refresh_blockui"> بروزرسانی داده ها <i class="fa-solid fa fa-refresh fa-spinner fa-spin"></i></a>
-            <a asp-area="Administrator" asp-controller="Publisher" asp-action="AddWriter" role="button" class="btn green-jungle"> ثبت ناشر جدید <i class="fa fa-plus ml-2"></i></a>
-            @* <a href="#showmodal=/Administrator/Writer/AddWriter" role="button" class="btn green-jungle"> ثبت نویسنده جدید <i class="fa fa-plus ml-2"></i></a> *@
-            @*             <a href="#showmodal=@Url.Page("./Index", "Create")" role="button" class="btn btn-outline green-haze"> ثبت کتاب جدید <i class="fa fa-plus ml-2"></i></a> *@
+            <a asp-area="Administrator" asp-controller="Publisher" asp-action="AddPublisher" role="button" class="btn green-jungle"> ثبت ناشر جدید <i class="fa fa-plus ml-2"></i></a>
             <a asp-area="Administrator" asp-controller="Home" asp-action="Index" role="button" class="btn dark btn-outline popovers" data-trigger="hover" data-placement="top" data-content="بازگشت به پنل مدیریت"> بازگشت به پنل مدیریت </a>
         </div>
     </div>
