--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -34,13 +34,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link ">
+                    <a asp-area="Administrator" asp-controller="Publisher" asp-action="ShowAllPublisher" class="nav-link ">
                         <span class="title">انتشارات</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a asp-area="Administrator" asp-controller="Writer" asp-action="ShowAllWriter" class="nav-link ">
-                        <span class="title">ناشران (مؤلف)</span>
+                        <span class="title">نویسنده گان (مؤلف)</span>
                     </a>
                 </li>
                 <li class="nav-item">
