--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -19,7 +19,7 @@
             </a>
             <ul class="sub-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link ">
+                    <a href="#" class="nav-link">
                         <span class="title">کتاب ها</span>
                     </a>
                 </li>
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link ">
+                    <a asp-area="Administrator" asp-controller="ProductSizeBook" asp-action="ShowAllSizeBook" class="nav-link ">
                         <span class="title">سایز کتاب (قطع)</span>
                     </a>
                 </li>
