--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -30,7 +30,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link ">
-                        <span class="title">ویژه گی ها</span>
+                        <span class="title"> خصوصیات و ویژه گی ها</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -46,11 +46,6 @@
                 <li class="nav-item">
                     <a asp-area="Administrator" asp-controller="ProductSizeBook" asp-action="ShowAllSizeBook" class="nav-link ">
                         <span class="title">سایز کتاب (قطع)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link ">
-                        <span class="title">برچسب ها و کلمات کلیدی</span>
                     </a>
                 </li>
             </ul>
