--- a/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
+++ b/FarhangbookStore/Areas/Administrator/Views/Shared/Components/Admin_Aside/Admin_Aside.cshtml
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link ">
+                    <a asp-area="Administrator" asp-controller="Product" asp-action="ShowAllPropertyname" class="nav-link ">
                         <span class="title"> خصوصیات و ویژه گی ها</span>
                     </a>
                 </li>
